[gd_scene load_steps=27 format=3 uid="uid://14dvy6vsgvk5"]

[ext_resource type="Script" path="res://Scripts/StageTwoHandler.gd" id="1_gdb45"]
[ext_resource type="MeshLibrary" uid="uid://b42rnkosadtr2" path="res://basicTileMeshLib.tres" id="1_rpmah"]
[ext_resource type="Script" path="res://Scripts/UnitSelect.gd" id="2_l4ecq"]
[ext_resource type="Material" uid="uid://c3hjdasnlwa2s" path="res://Materials/UnitSelectionHighlightMat.tres" id="2_lrwyv"]
[ext_resource type="Material" uid="uid://bbj3dpnikmoe7" path="res://Materials/FillerUnitMat.tres" id="3_73agh"]
[ext_resource type="Material" uid="uid://c84evxjk5m2i6" path="res://Materials/BreakerUnitMat.tres" id="4_gdmim"]
[ext_resource type="Material" uid="uid://cydvoyl8agen0" path="res://Materials/FlyerUnitMaterial.tres" id="5_q7d74"]
[ext_resource type="PackedScene" uid="uid://cd665hbqpt2qq" path="res://Meshes/Boro_10.gltf" id="6_8hs3k"]
[ext_resource type="Script" path="res://Meshes/boro_10.gd" id="7_a2oes"]
[ext_resource type="AudioStream" uid="uid://dsdrnrow8i3xn" path="res://Scenes/Back Talk.wav" id="8_5ofd6"]
[ext_resource type="PackedScene" uid="uid://cfrvmfk42jcmy" path="res://Meshes/Igni_9.gltf" id="9_xsodp"]
[ext_resource type="Script" path="res://Meshes/igni_9.gd" id="10_3o47s"]
[ext_resource type="PackedScene" uid="uid://cdpgn66f8w1e0" path="res://Meshes/Pneuma_9.gltf" id="12_y1lpn"]
[ext_resource type="Script" path="res://Meshes/pneuma_9.gd" id="13_111on"]

[sub_resource type="Environment" id="Environment_hp1x0"]

[sub_resource type="BoxMesh" id="BoxMesh_ij0iq"]
size = Vector3(3, 0.05, 3)

[sub_resource type="BoxMesh" id="BoxMesh_4mdr3"]
material = ExtResource("2_lrwyv")
size = Vector3(3.5, 0.05, 3.5)

[sub_resource type="BoxMesh" id="BoxMesh_t3l2r"]
material = ExtResource("3_73agh")
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="BoxMesh" id="BoxMesh_run1k"]
size = Vector3(3, 0.05, 3)

[sub_resource type="BoxMesh" id="BoxMesh_hk57v"]
material = ExtResource("2_lrwyv")
size = Vector3(3.5, 0.05, 3.5)

[sub_resource type="BoxMesh" id="BoxMesh_s6hwp"]
material = ExtResource("4_gdmim")
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="BoxMesh" id="BoxMesh_vnydp"]
size = Vector3(3, 0.05, 3)

[sub_resource type="BoxMesh" id="BoxMesh_bnqqu"]
material = ExtResource("2_lrwyv")
size = Vector3(3.5, 0.05, 3.5)

[sub_resource type="BoxMesh" id="BoxMesh_8g48r"]
material = ExtResource("5_q7d74")
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bn7ix"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_kpi4x"]
material = SubResource("StandardMaterial3D_bn7ix")
size = Vector3(50, 0.05, 50)

[node name="StageTwo" type="Node3D"]

[node name="StageHandler" type="Node3D" parent="."]
script = ExtResource("1_gdb45")

[node name="GridMap" type="GridMap" parent="StageHandler"]
mesh_library = ExtResource("1_rpmah")
cell_size = Vector3(1, 1, 1)

[node name="WorldEnvironment" type="WorldEnvironment" parent="StageHandler"]
environment = SubResource("Environment_hp1x0")

[node name="Camera3D" type="Camera3D" parent="StageHandler/WorldEnvironment"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 5, 10, 5)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="StageHandler/WorldEnvironment"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 5, 10, 5)

[node name="UnitHolder" type="Node3D" parent="StageHandler"]

[node name="GhostHolder" type="Node3D" parent="StageHandler"]

[node name="SoulHolder" type="Node3D" parent="StageHandler"]

[node name="StageHUD" type="Control" parent="StageHandler"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SoulCount" type="Label" parent="StageHandler/StageHUD"]
layout_mode = 0
offset_left = 10.0
offset_top = 25.0
offset_right = 50.0
offset_bottom = 48.0
text = "Soul Count"

[node name="TurnCount" type="Label" parent="StageHandler/StageHUD"]
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 50.0
offset_bottom = 73.0
text = "Turn Count"

[node name="Selection" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 5, 5)
script = ExtResource("2_l4ecq")

[node name="SelectionBox1" type="Node3D" parent="Selection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Selection/SelectionBox1"]
mesh = SubResource("BoxMesh_ij0iq")
skeleton = NodePath("../..")

[node name="SelectionHighlight1" type="MeshInstance3D" parent="Selection/SelectionBox1/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)
visible = false
mesh = SubResource("BoxMesh_4mdr3")
skeleton = NodePath("../../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Selection/SelectionBox1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
visible = false
mesh = SubResource("BoxMesh_t3l2r")

[node name="blockbench_export" parent="Selection/SelectionBox1" instance=ExtResource("6_8hs3k")]
transform = Transform3D(1.91069e-15, 4.37114e-08, -1, 1, -4.37114e-08, 0, -4.37114e-08, -1, -4.37114e-08, 0.75, 1, 0.585)
script = ExtResource("7_a2oes")

[node name="SelectionBox2" type="Node3D" parent="Selection"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Selection/SelectionBox2"]
mesh = SubResource("BoxMesh_run1k")
skeleton = NodePath("../..")

[node name="SelectionHighlight2" type="MeshInstance3D" parent="Selection/SelectionBox2/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)
visible = false
mesh = SubResource("BoxMesh_hk57v")
skeleton = NodePath("../../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Selection/SelectionBox2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
visible = false
mesh = SubResource("BoxMesh_s6hwp")

[node name="blockbench_export2" parent="Selection/SelectionBox2" instance=ExtResource("9_xsodp")]
transform = Transform3D(1.91069e-15, 4.37114e-08, -1, 1, -4.37114e-08, 0, -4.37114e-08, -1, -4.37114e-08, 0, 0.5, 0.5)
script = ExtResource("10_3o47s")

[node name="SelectionBox3" type="Node3D" parent="Selection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Selection/SelectionBox3"]
mesh = SubResource("BoxMesh_vnydp")

[node name="SelectionHighlight3" type="MeshInstance3D" parent="Selection/SelectionBox3/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)
visible = false
mesh = SubResource("BoxMesh_bnqqu")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Selection/SelectionBox3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
visible = false
mesh = SubResource("BoxMesh_8g48r")

[node name="blockbench_export" parent="Selection/SelectionBox3" instance=ExtResource("12_y1lpn")]
transform = Transform3D(1.91069e-15, 4.37114e-08, -1, 1, -4.37114e-08, 0, -4.37114e-08, -1, -4.37114e-08, -0.4, 0.5, 0.55)
script = ExtResource("13_111on")

[node name="Background" type="MeshInstance3D" parent="Selection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
mesh = SubResource("BoxMesh_kpi4x")

[node name="Control" type="Control" parent="Selection"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label1" type="Label" parent="Selection/Control"]
offset_left = 515.0
offset_top = 33.0
offset_right = 648.0
offset_bottom = 56.0
text = "Select Unit Order
"

[node name="UnitDescriptionLabel1" type="Label" parent="Selection/Control"]
offset_left = 100.0
offset_top = 500.0
offset_right = 374.0
offset_bottom = 549.0
text = "Boro
Turn lava tiles into walkable tiles"
horizontal_alignment = 1

[node name="UnitDescriptionLabel2" type="Label" parent="Selection/Control"]
offset_left = 430.0
offset_top = 500.0
offset_right = 729.0
offset_bottom = 549.0
text = "Igni
Turn mountain tiles into walkable tiles"
horizontal_alignment = 1

[node name="UnitDescriptionLabel3" type="Label" parent="Selection/Control"]
offset_left = 850.0
offset_top = 500.0
offset_right = 1003.0
offset_bottom = 549.0
text = "Pneuma
Fly over lava tiles"
horizontal_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_5ofd6")
autoplay = true
